packages/typ/tests/fixtures/diagnostics/0152_adt_recursive_list_payload_mismatch_03.ml.infer.expected
File "0152_adt_recursive_list_payload_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0152_adt_recursive_list_payload_mismatch_03 is not a valid module name.

File "0152_adt_recursive_list_payload_mismatch_03.ml", line 2, characters 39-43:
2 | let _ : int mylist_gamma = Cons_gamma (true, Nil_gamma)
                                           ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
